# code-goat

./: .gitignore  .gitmodules  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.github/: platforms.json
.github/rust/: action.yaml
.github/workflows/: build.yaml  ci.yaml
code-goat/: Cargo.toml
code-goat/crates/cli/: Cargo.toml
code-goat/crates/core/: Cargo.toml
code-goat/crates/judger/: Cargo.toml
code-goat/crates/judger/src/: ffi.rs  judger.rs  lib.rs  logger.rs  models.rs  runner.rs  sandbox.rs  spec.rs
code-goat/crates/judger/src/sandbox/: mod.rs
evaluator/: go.mod  go.sum  main.go
evaluator/adapter/: adapter.go  code_goat.go  code_goat.h  qoj.go  result.go
evaluator/config/: benchmark.go  profile.go  run_spec.go  spec.go  string_slice.go  testcase.go
evaluator/constants/: enum.go  unit.go
evaluator/eval/: eval.go  stat.go
evaluator/profile/: benchmark.go  config.go  spec.go  testcase.go
evaluator/runner/: code_goat.go  code_goat.h  interface.go  qingdao.go  qoj.go  result.go  runner.go
evaluator/summary/: stat.go  summary.go
evaluator/types/: byte_size.go  string_slice.go
evaluator/utils/: byte_size.go  env.go  environment.go  error.go  format.go  serializable.go  string_slice.go  util.go
scripts/: add-test.sh  build-qoj.sh  check-audit.sh  code-goat-run.sh  code_goat_run.c  evaluate.sh  qingdao-build.sh  qingdao-run.sh  run-qoj.sh  trace-syscall.sh
scripts/tools/: scraper.py
tests/: template-config.yaml  template-profile.yaml
tests/a+b/: config.yaml  profile.yaml
(+25 files in other folders)
