[package]
name = "judger"
version = "0.1.0"
edition = "2024"

[lib]
name = "judger"
crate-type = ["rlib", "cdylib"]

[dependencies]
cgroups-rs = "0.4.0"
libseccomp = "0.4.0"
log = "0.4.28"
nix = { version = "0.30.1", features = ["sched", "mount", "resource", "fs", "signal"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
